--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="#About">About</a></li>
-							<li><a href="#Corsi">Corsi</a></li>
-							<li><a href="#Docenti">Docenti</a></li>
-							<li><a href="#Iscrizione">Iscrizione</a></li>
+							<li><a href="index.html#About">About</a></li>
+							<li><a href="index.html#Corsi">Corsi</a></li>
+							<li><a href="docenti.html">Docenti</a></li>
+							<li><a href="index.html#Iscrizione">Iscrizione</a></li>
 							<li><a href="#footer">Contatti</a></li>
 						</ul>
 					</nav>
@@ -68,56 +68,56 @@
 								<h2 class="sectiontitle">CORSI</h2>
 								<article class="style1">
 									<span class="image">
-										<img src="images/drums.jpg" alt="" />
+										<img src="images/batteria.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Batteria</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un percorso completo per sviluppare tecnica, ritmo, coordinazione e musicalità, imparando a suonare con sicurezza attraverso esercizi progressivi e brani moderni.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/chitarra.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Chitarra</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un corso pensato per costruire tecnica, suono e creatività, affrontando stili diversi e sviluppando un metodo solido per suonare con consapevolezza.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/pianoforte.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Pianoforte</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Lezioni mirate a sviluppare tecnica, ascolto e sensibilità musicale, attraverso studio progressivo, repertori personalizzati e un approccio attento alla postura.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style4">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/basso.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Basso</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un percorso dedicato al groove, al timing e al ruolo del basso nella band, con esercizi mirati e sviluppo del linguaggio moderno.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images/contra.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Contrabbasso</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Studio dello strumento con attenzione a tecnica, arco, intonazione e musicalità, approfondendo repertori classici e moderni con metodo progressivo.</p>
 										</div>
 									</a>
 								</article>
@@ -128,29 +128,29 @@
 									<a href="generic.html">
 										<h2>Canto</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un corso che unisce tecnica vocale, respirazione e interpretazione, aiutando ogni allievo a trovare la propria voce in modo consapevole e naturale.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="images/violino.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Violino</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un percorso completo per sviluppare tecnica, intonazione, postura e musicalità, attraverso esercizi mirati e repertori adatti ad ogni livello.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
+										<img src="images/fiati.png" alt="" />
 									</span>
 									<a href="generic.html">
 										<h2>Fiati</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Lezioni dedicate a respirazione, tecnica strumentale e sviluppo del suono, con esercizi progressivi e repertorio personalizzato per ogni livello.</p>
 										</div>
 									</a>
 								</article>
@@ -161,7 +161,7 @@
 									<a href="generic.html">
 										<h2>Musica d'Insieme</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un’esperienza fondamentale per imparare a suonare in gruppo, sviluppando ascolto, dinamica, interplay e preparazione di brani in ensemble.</p>
 										</div>
 									</a>
 								</article>
@@ -172,7 +172,7 @@
 									<a href="generic.html">
 										<h2>Musica Elettronica</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un percorso pratico per creare musica elettronica, esplorando sound design, arrangiamento e performance, attraverso strumenti digitali professionali.</p>
 										</div>
 									</a>
 								</article>
@@ -183,7 +183,7 @@
 									<a href="generic.html">
 										<h2>Beatmaking</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un corso dedicato alla costruzione di beat moderni, campionamento, groove e creatività, lavorando su software professionali e stili contemporanei.</p>
 										</div>
 									</a>
 								</article>
@@ -194,7 +194,7 @@
 									<a href="generic.html">
 										<h2>Music Production</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un percorso completo per produrre musica moderna: registrazione, editing, mixing, arrangiamento e workflow creativo con strumenti digitali professionali.</p>
 										</div>
 									</a>
 								</article>
@@ -205,7 +205,7 @@
 									<a href="generic.html">
 										<h2>Teoria Musicale & Solfeggio</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un corso indispensabile per comprendere linguaggio, ritmo, lettura e armonia, costruendo solide basi teoriche utili a ogni musicista.</p>
 										</div>
 									</a>
 								</article>
@@ -216,7 +216,7 @@
 									<a href="generic.html">
 										<h2>Propedeutica per Bambini</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un percorso ludico-musicale che sviluppa ascolto, ritmo, creatività e coordinazione, introducendo i bambini alla musica attraverso gioco ed esplorazione.</p>
 										</div>
 									</a>
 								</article>
@@ -227,7 +227,7 @@
 									<a href="generic.html">
 										<h2>Coro</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Un’esperienza collettiva che sviluppa voce, ascolto, respirazione e affiatamento, cantando insieme brani moderni e tradizionali in armonia.</p>
 										</div>
 									</a>
 								</article>
@@ -242,7 +242,7 @@
 									<a href="docenti.html#Leonardo-Baggiani">
 										<h2>Leonardo Baggiani</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Bassista e contrabbassista, sviluppa tecnica, interpretazione e creatività, integrando postura, scioltezza, motivazione e mindset nello studio musicale.</p>
 										</div>
 									</a>
 								</article>
@@ -253,7 +253,7 @@
 									<a href="docenti.html#Giuseppe-Cancellieri">
 										<h2>Giuseppe Cancellieri</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Educatore musicale specializzato nell’infanzia, introduce i bambini alla musica attraverso gioco, ascolto e creatività.</p>
 										</div>
 									</a>
 								</article>
@@ -264,7 +264,7 @@
 									<a href="docenti.html#Perla-Cangi">
 										<h2>Perla Cangi</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Cantante e insegnante attenta alla persona, accompagna ogni allievo nello sviluppo della propria voce con cura, tecnica e consapevolezza.</p>
 										</div>
 									</a>
 								</article>
@@ -275,7 +275,7 @@
 									<a href="generic.html">
 										<h2>Marilisa Cantini</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Cantante e direttrice di coro, guida gruppi vocali con sensibilità, cura timbrica e attenzione alla crescita collettiva.</p>
 										</div>
 									</a>
 								</article>
@@ -286,7 +286,18 @@
 									<a href="docenti.html#Riccardo-Cardazzo">
 										<h2>Riccardo Cardazzo</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Batterista versatile, sviluppa tecnica, ritmo, musicalità, postura e scioltezza, integrando motivazione e mindset nello studio e performance dal vivo.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style0">
+									<span class="image">
+										<img src="images/pic12.jpg" alt="" />
+									</span>
+									<a href="docenti.html#Marilisa-Cantini">
+										<h2>Marco Cianciarulo</h2>
+										<div class="content">
+											<p>Pianista classico formatosi alla Scuola di Musica di Fiesole, unisce tecnica solida, sensibilità artistica e studio della composizione.</p>
 										</div>
 									</a>
 								</article>
@@ -297,7 +308,7 @@
 									<a href="docenti.html#Lorenzo-Consigli">
 										<h2>Lorenzo Consigli</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Bassista attivo e versatile, unisce esperienza live e competenza didattica, guidando gli studenti con metodo, musicalità e ascolto.</p>
 										</div>
 									</a>
 								</article>
@@ -308,7 +319,29 @@
 									<a href="docenti.html#Tommaso-Corsini">
 										<h2>Tommaso Corsini</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Batterista e polistrumentista, sostiene i gruppi nello sviluppo del timing, dell’affiatamento ritmico e dell’identità stilistica.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style0">
+									<span class="image">
+										<img src="images\pic11.jpg" alt="" />
+									</span>
+									<a href="docenti.html#Emmanuel-Comanici">
+										<h2>Emmanuel Comanici</h2>
+										<div class="content">
+											<p>Violinista e violista con forte esperienza orchestrale, unisce precisione tecnica, musicalità e cura didattica nel percorso degli studenti.</p>
+										</div>
+									</a>
+								</article>
+								<article class="style0">
+									<span class="image">
+										<img src="images\pic11.jpg" alt="" />
+									</span>
+									<a href="docenti.html#Leonardo-Gensini">
+										<h2>Leonardo Gensini</h2>
+										<div class="content">
+											<p>Chitarrista in formazione jazz e musicista versatile, unisce creatività, conoscenze teoriche e competenze digitali nella didattica.</p>
 										</div>
 									</a>
 								</article>
@@ -319,7 +352,7 @@
 									<a href="docenti.html#Niccolò-Mani">
 										<h2>Niccolò Mani</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Musicista e teorico laureato ad Amsterdam, porta un approccio moderno e chiaro alla formazione teorica e alla lettura musicale.</p>
 										</div>
 									</a>
 								</article>
@@ -330,7 +363,7 @@
 									<a href="docenti.html#Marco-Melillo">
 										<h2>Marco Melillo</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Chitarrista elettrico e acustico dalla solida formazione rock e moderna, guida gli studenti con metodo chiaro e approccio motivante.</p>
 										</div>
 									</a>
 								</article>
@@ -341,29 +374,7 @@
 									<a href="docenti.html#Giacomo-Morandi">
 										<h2>Giacomo Morandi</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style0">
-									<span class="image">
-										<img src="images\PP-Morandi Marco.jpg" alt="" />
-									</span>
-									<a href="docenti.html#Marco-Morandi">
-										<h2>Marco Morandi</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style0">
-									<span class="image">
-										<img src="images\PP-Nozzoli Monica.jpg" alt="" />
-									</span>
-									<a href="docenti.html#Monica-Nozzoli">
-										<h2>Monica Nozzoli</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Chitarrista attivo, guida gli ensemble con attenzione al suono d’insieme, alla comunicazione musicale e alla crescita espressiva.</p>
 										</div>
 									</a>
 								</article>
@@ -374,7 +385,7 @@
 									<a href="docenti.html#Andrea-Sciarra">
 										<h2>Andrea Sciarra</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Batterista professionista attivo a livello nazionale, unisce esperienza live, studio continuo e didattica moderna in un percorso motivante.</p>
 										</div>
 									</a>
 								</article>
@@ -385,7 +396,7 @@
 									<a href="docenti.html#Guglielmo-Torelli">
 										<h2>Guglielmo Torelli</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Producer e sound designer, insegna produzione, beatmaking e musica elettronica con approccio pratico e orientato alla creatività.</p>
 										</div>
 									</a>
 								</article>
@@ -396,7 +407,7 @@
 									<a href="docenti.html#Bruna-Vietri">
 										<h2>Bruna Vietri</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Vocal coach e formatrice, creatrice del metodo CantoSuMovimento®, unisce voce, corpo e consapevolezza in un approccio innovativo..</p>
 										</div>
 									</a>
 								</article>
@@ -502,7 +513,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://gugotorelli.com/">Gugo</a></li>
 							</ul>
 						</div>
 					</footer>
